@@ -1,6 +1,0 @@
-
-from py.test import raises
-import py
-import sys
-import inspect
-
